css fix- alignment proper now

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 body {
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 header {
     width: 100%;
@@ -55,22 +59,23 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 85%;
-    margin: auto;
+   
+    
 }
 .section {
     width: 100%;
     padding: 1rem 0rem;
-}
-.about-me {
     display: flex;
+    justify-content:flex-start;
+    align-items: center;
 }
+
 .about-me div {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
-    width: 100%;
+    
 }
 .section-title {
     border-right: 3px solid #034748;
@@ -179,16 +184,7 @@ span {
     align-items: center;
     width: 60rem;
 }
-.work {
-    display: flex;
-}
-.contact {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    
-    
-}
+
 .contact div {
     display: flex;
     gap: 2rem;
@@ -267,7 +263,7 @@ span {
     font-size: 1em;
 }
 .first-work {
-    width: 100%;
+    width: 85%;
     
 }
 .contact-link {
